some japan edits

--- a/japan/sonic2b/en/index.html
+++ b/japan/sonic2b/en/index.html
@@ -147,7 +147,7 @@ This is where players can exchange ideas and have a good time. Please read the u
 <TABLE BORDER=0 CELLPADDING=2 CELLSPACING=0 WIDTH=530>
 <TR>
 <TD colspan=2 height=16 align="center">
-<a href="http://www.sonicteam.com/index_e.html" target="_top"><font size=2 face="Helvetica, Arial"><b>[ Top Page ]</b></font></a><br>
+<a href="/index.html" target="_top"><font size=2 face="Helvetica, Arial"><b>[ Top Page ]</b></font></a><br>
 </TD>
 </TR>
 <TR><TD bgcolor="#000000"><font size=1 color="#CC6666" face="Helvetica, Arial">
