--- a/japan/sonic2b/en/summary3_e.html
+++ b/japan/sonic2b/en/summary3_e.html
@@ -69,7 +69,7 @@ Not only you can buy tree fruits depending on the number of rings collected in t
 </TABLE>
 
 <TABLE BORDER=0 CELLPADDING=2 CELLSPACING=0 WIDTH=550>
-<TR><TD><a href="http://www.sonicteam.com/gba/sonic/home.html"><img src="../img/advance.gif" width=120 height=54 border=0></a></TD><TD><font size=2 face="Helvetica, Arial">Look here for more information about "Sonic Advance" for Game Boy Advance. (in Japanese)</font></TD></TR>
+<TR><TD><a href="/japan/advance/home.html"><img src="../img/advance.gif" width=120 height=54 border=0></a></TD><TD><font size=2 face="Helvetica, Arial">Look here for more information about "Sonic Advance" for Game Boy Advance. (in Japanese)</font></TD></TR>
 </TABLE>
 
 <TABLE BORDER=0 CELLPADDING=2 CELLSPACING=0 WIDTH=530>
