--- a/japan/sonicadv2/index.html
+++ b/japan/sonicadv2/index.html
@@ -23,12 +23,7 @@
 <tr><td height=40 colspan=2></td></tr>
 
 <tr>
-<td align="center" width=270 height=16>
-<font size=2>
-<img src="spacer.gif" border=0 alt="-"><img src="spacer.gif" border=0 alt="-"><a href="sonic_j.html"><img src="ya0.gif" border=0 alt="&lt;-"><img src="spacer.gif" border=0 alt="-"><b>日本語ページ</b></a>
-</font>
-</td>
-<td align="center" width=270 height=16><a href="sonic_e.html"><font face="Arial, Helvetica, Geneva, sans-serif" size=2><b>English Page</b></font><img src="spacer.gif" border=0 alt="-"><img src="ya1.gif" border=0 alt="-&gt;"></a><img src="spacer.gif" border=0 alt="-"><img src="spacer.gif" border=0 alt="-">
+<td align="center" width=270 height=16><a href="sonic_e.html"><font face="Arial, Helvetica, Geneva, sans-serif" size=2><b>ENTER</b></font>
 </td>
 </tr>
 
