--- a/japan/advance/chao.html
+++ b/japan/advance/chao.html
@@ -125,7 +125,7 @@ body{
       <table width="530" border="0" cellspacing="2" cellpadding="2" bgcolor="#0066FF">
         <tr> 
           <td bgcolor="#9966FF"> 
-            <div align="right"><b><font size="3"><b><font size="2"><a href="http://www.sonicteam.com/sonic2b/index.html" target="_top"><img src="image/sgc_link.gif" width="100" height="55" align="right" border="0"><br>
+            <div align="right"><b><font size="3"><b><font size="2"><a href="/japan/sonic2b/index.html" target="_top"><img src="image/sgc_link.gif" width="100" height="55" align="right" border="0"><br>
               <font color="#00FFFF">Nintendo GameCube version <br>
             For more information on Sonic Adventure 2 Battle, click here!</font></a></font></b></font></b> </div>
           </td>
