--- a/japan/sonic2b/index.html
+++ b/japan/sonic2b/index.html
@@ -29,10 +29,10 @@ background-attachment:fixed;
 <TD WIDTH=64 HEIGHT=340></TD>
 </TR>
 <TR>
-<!--<TD COLSPAN=2 align="center">
+<TD COLSPAN=2 align="center">
 <IMG SRC="img/sa2b_web_s_05.gif" WIDTH=261 HEIGHT=160 BORDER=0 ALT="Japanese Page"><br>
 <font size=3 face="MS PGothic"><b><a href="ja/index.html">日本語ページ</a></b></font>
-</TD>-->
+</TD>
 <TD COLSPAN=2 align="center">
 <IMG SRC="img/sa2b_web_s_06.gif" WIDTH=259 HEIGHT=160 BORDER=0 ALT="English Page"><br>
 <font size=3 face="Helvetica, Arial"><b><a href="en/index.html">English Page</a></b></font>
