--- a/japan.html
+++ b/japan.html
@@ -6,15 +6,16 @@
 <link rel="stylesheet" type="text/css" href="main.css" media="all">
 </head>
 <h1 align="center">Translated Japanese Sonic Sites</h1>
-<a href="japan/sonic3d" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic3d.png" width="320" height="200" alt="Sonic 3D: Flickies' Island"></a>
+<a href="japan/sonic3d" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic3d.png" width="320" height="160" alt="Sonic 3D: Flickies' Island"></a>
 <a href="japan/sonicjam" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicjam.png" width="320" height="200" alt="Sonic Jam"></a>
-<a href="japan/sonicr" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicr.png" width="320" height="200" alt="Sonic R"></a>
+<a href="japan/sonicr" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicr.png" width="320" height="240" alt="Sonic R"></a>
 <!--<a href="japan/sonicadv" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicadv.png" width="320" height="200" alt="Sonic Adventure"></a>-->
-<a href="japan/sonicadv_int" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicadv_int.png" width="320" height="200" alt="Sonic Adventure International"></a>
-<!--<a href="japan/sonicadv2" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicadv2.png" width="320" height="200" alt="Sonic Adventure 2"></a>-->
-<a href="japan/advance" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/advance.png" width="320" height="200" alt="Sonic Advance"></a>
+<a href="japan/sonicadv_int" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicadv_int.png" width="320" height="240" alt="Sonic Adventure International"></a>
+<a href="japan/sonicadv2" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonicadv2.png" width="320" height="140" alt="Sonic Adventure 2"></a>
+<a href="japan/advance" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/advance.png" width="320" height="140" alt="Sonic Advance"></a>
+<a href="japan/sonic2b/en" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="jpimgs/sonic2b.png" width="320" height="160" alt="Sonic Adventure 2: Battle"></a>
 <h2 align="center">Credits</h2>
 <p align="center">Translation: KrazeeTobi
 <br>Text Revision: KrazeeTobi
-<br>Other shit: Other people, if they get involved</br></br></p>
+<br>Other credits: Other people, if they get involved</br></br></p>
 </html>
