--- a/japan/SonicChannel/topics/goods/20211228_002790/index.html
+++ b/japan/SonicChannel/topics/goods/20211228_002790/index.html
@@ -152,7 +152,7 @@
 	<th scope="row">販売店舗</th>
 	<td><a href="https://www.lego.com/ja-jp" target="_blank">レゴ公式オンラインストア</a><br />
 	  <a href="http://clickbrick.info/shop/" target="_blank">全国のレゴストア</a><br />
- 及び<a href="https://www.rakuten.ne.jp/gold/benelic lcs/" target="_blank">レゴ認定販売店ベネリック レゴストア 楽天市場店 </a><br />
+ 及び<a href="https://www.rakuten.ne.jp/gold/benelic-lcs/" target="_blank">レゴ認定販売店ベネリック レゴストア 楽天市場店 </a><br />
 レゴランド・ジャパン・リゾート<br />
 レゴランド・ディスカバリー・センター東京、レゴランド・ディスカバリー・センター大阪 </td>
   </tr>
