--- a/sonichq/fanfair/fancomics/comicstrips/chainspike/chainspike.htm
+++ b/sonichq/fanfair/fancomics/comicstrips/chainspike/chainspike.htm
@@ -9,8 +9,8 @@
 
 <body bgcolor="#FFFFFF" background="/sonichq/images/backgrounds/amygraybg.gif" link="#0000CC" vlink="#0000CC">
 <p align="left"><font face="Arial, Helvetica, sans-serif" size="3"><b><font color="#000099"><a href="/sonichq/main.htm">Sonic 
-  HQ</a> / <a href="/sonichq/fanfair">Fan Fair</a> / <a href="../../">Comic 
-  Strips</a> / Sarah-Le</font></b></font><br>
+  HQ</a> / <a href="../../../">Fan Fair</a> / <a href="../../">Comic Strips</a> / Lien 
+  &quot;Chainspike&quot; </font></b></font><br>
 
 <div align="center">
   <table border=0 cellspacing=0 cellpadding=0 width="100%">
@@ -19,7 +19,7 @@
       <th bgcolor=black width=100%> 
         <div align="left">
           <font color="#66CCFF" size="3" face="Verdana, Arial, Helvetica, sans-serif">Comic 
-          Strips by Sarah-Le</font></div>
+          Strips by Chainspike</font></div>
       </th>
       <td width=19><img src=/sonichq/topright.gif width=19></td>
     </tr>
@@ -29,9 +29,11 @@
     <tr> 
       <td bgcolor="#000000">&nbsp;</td>
       <td bgcolor="#FFFFFF"> 
-        <div align="left"> 
+        <div align="left">
           <p align="center">1<br>
-            <img src="juliesuhallo.jpg" width="432" height="607"> </p>
+            <img src="ssss1.jpg" width="698" height="207"> </p>
+          <p align="center">2<br>
+            <img src="ssss2.jpg" width="629" height="207"> </p>
         </div>
         </td>
       <td bgcolor="#000000">&nbsp;</td>
