--- a/sonichq/fanfair/hoaxes/profiles.php/artist.1/index.html
+++ b/sonichq/fanfair/hoaxes/profiles.php/artist.1/index.html
@@ -1,105 +1,182 @@
 
-<html><head><title>Sonic HQ - Fan Fair - Hoaxes - 1</title>
-<base href=/sonichq/sonichq/fanfair/edited/>
+<html><head><title>Sonic HQ - Fan Fair - Hoaxes - Jamie Swiftrunner</title>
+<base href=/sonichq/fanfair/pics/>
 <style type=text/css><!-- a:hover{text-decoration: underline} A{text-decoration:none} --></style>
 </head>
 <body bgcolor=FFFFFF TEXT=000000 LINK=6699FF VLINK=6699FF ALINK=00FFFF 
-background=../../../sonichq/images/backgrounds/amygraybg.gif bgproperties=fixed>
-&nbsp;<br>&nbsp;
+background=../../../images/backgrounds/amygraybg.gif bgproperties=fixed>
 
-<p align=left><font face="Arial, Helvetica, sans-serif" size=3 color=000099><b>
-<a href=/sonichq/main.htm>Sonic HQ</a> / <a href=/sonichq/fanfair>Fan Fair</a> / <a href=/sonichq/fanfair/hoaxes>Hoaxes</a> / 1</font>
+<br>
+
+<center>
+<IFRAME SRC="https://web.archive.org/20020107000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top-nopop&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO" MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
+<SCRIPT LANGUAGE="JavaScript">document.write('<SCR'+'IPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20020107000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top-nopop&JS=Y&TARGET=_blank"></SCR'+'IPT>');</SCRIPT>
+<NOSCRIPT>
+<A HREF="https://web.archive.org/20020107000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top-nopop" TARGET="_blank"><IMG SRC="https://web.archive.org/20020107000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y" HEIGHT="60" WIDTH="468"></A>
+</NOSCRIPT>
+</IFRAME>
+<script language="javascript">whdAffiliate=79</script>
+<script language="javascript" src="https://web.archive.org/20020107000000/http://www.webhitsdirect.com/whd.js"></script>
+</center>
+
+<p><font face="Arial, Helvetica, sans-serif" size=3 color=000099><b>
+<a href=/sonichq/main.htm>Sonic HQ</a> / <a href=/sonichq/fanfair>Fan Fair</a> / <a href=/sonichq/fanfair/hoaxes>Hoaxes</a> / Jamie Swiftrunner</font>
 </b></font>
 
 <center>
 
-<p><table border=0 cellspacing=0 cellpadding=0>
-<tr><td bgcolor=000000><center>
+<p><table border=0 cellspacing=0 cellpadding=3>
+<tr><td valign=middle bgcolor=000000><center>
 <p><font face=Arial size=2 color=white><b>
-[<a href=>Hoaxes Main</a> | <a href=/sonichq/>HQ Main</a>]
-</b></font></center></td></tr></table>
+[<a href=/sonichq/fanfair/hoaxes>Hoaxes Main</a> | <a href=/>HQ Main</a>]<br>[<a href=../hoaxes/profiles.php/artist.1/>Page 1</a> | <a href=../hoaxes/profiles.php/artist.1//index.20>Page 2</a>]</b></font></center></td></tr></table>
 
 <p><table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100%>
-<tr><td width=19><img src=../../sonichq/topleft.gif width=19></td>
+<tr><td width=19><img src=../../topleft.gif width=19></td>
 
 <td bgcolor=black width=100%><font color=6699FF font face=arial font size=4>
-Sonic HQ Hoaxes | 1</font></td>
+Sonic HQ Hoaxes | Jamie Swiftrunner</font></td>
 
-<td width=19><img src=../../sonichq/topright.gif width=19></td></tr>
+<td width=19><img src=../../topright.gif width=19></td></tr>
 </table>
 
 <table border=1 bordercolor=000000 width=100% cellspacing=0 bgcolor=ffffff>
 
 <tr><td><center>
-<a href=/sonichq/fanfair/hoaxes/swiftrunner/01.gif><img src=swiftrunner/01.gif border=0></a>
+<a href=/sonichq/fanfair/pics/djaminalee//mechabattle1.jpg><img src=djaminalee/thumbnails/mechabattle1.jpg border=0></a>
 </center></td>
 <td><center>
-<b>01.gif | 2001-09-16 14:32:37 | 20.915 KB<br>Artist: Jamie Swiftrunner</b></center>
-<br>Better not get on Julie's bad side!<p>Keywords: * character-hoax * technical-hoax * sprite * 
+<b>mechabattle1.jpg | 5/7/00 | 87 KB<br>Artist: Jamie Swiftrunner</b></center>
+<br>Old pic done in my old style, but I still like it. Metal Sonic and Robo Knux are © to SEGA, Darian/Metalia is © to me.<p>Categories: * fan art * 
 </td><td><center>
-<a href=/sonichq/fanfair/hoaxes/swiftrunner/02.gif><img src=swiftrunner/02.gif border=0></a>
+<a href=/sonichq/fanfair/pics/djaminalee//sasally.jpg><img src=djaminalee/thumbnails/sasally.jpg border=0></a>
 </center></td>
 <td><center>
-<b>02.gif | 2001-09-16 18:58:14 | 11.957 KB<br>Artist: Jamie Swiftrunner</b></center>
-<br>Why sally, isn't it rude to yawn in public?<p>Keywords: * character-hoax * technical-hoax * sprite * 
+<b>sasally.jpg | 5/7/00 | 81 KB<br>Artist: Jamie Swiftrunner</b></center>
+<br>SA style pic of Sally. I like the quote on this one.<p>Categories: * fan art * 
 </td></tr><tr><td><center>
-<a href=/sonichq/fanfair/hoaxes/swiftrunner/03.gif><img src=swiftrunner/03.gif border=0></a>
+<a href=/sonichq/fanfair/pics/djaminalee//sonicballz.jpg><img src=djaminalee/thumbnails/sonicballz.jpg border=0></a>
 </center></td>
 <td><center>
-<b>03.gif | 2001-09-16 19:00:23 | 5.719 KB<br>Artist: Jamie Swiftrunner</b></center>
-<br>Spectre with smoke floating around him.<p>Keywords: * character-hoax * technical-hoax * sprite * 
+<b>sonicballz.jpg | 5/7/00 | 143 KB<br>Artist: Jamie Swiftrunner</b></center>
+<br>RQ for Jen. It's the Triple Threat<br>dressed as Goku, Veggita and Piccolo! ^^<p>Categories: * fan art * 
 </td><td><center>
-<a href=/sonichq/fanfair/hoaxes/../edited/swiftrunner/04.gif><img src=../edited/swiftrunner/04.gif border=0></a>
+<a href=/sonichq/fanfair/pics/djaminalee//amy.gif><img src=djaminalee/thumbnails/amy.gif border=0></a>
 </center></td>
 <td><center>
-<b>04.gif | 2001-09-16 19:05:04 | 9.915 KB<br>Artist: Jamie Swiftrunner</b></center>
-<br>Remington.<p>Keywords: * character-hoax * technical-hoax * sprite * 
+<b>amy.gif | 6/18/00 | 16 KB<br>Artist: Jamie Swiftrunner</b></center>
+<br>I love dis piccie... It's a mouse art pic of Amy!<p>Categories: * fan art * 
 </td></tr><tr><td><center>
-<a href=/sonichq/fanfair/hoaxes/../edited/swiftrunner/05.gif><img src=../edited/swiftrunner/05.gif border=0></a>
+<a href=/sonichq/fanfair/pics/djaminalee//amymad.jpg><img src=djaminalee/thumbnails/amymad.jpg border=0></a>
 </center></td>
 <td><center>
-<b>05.gif | 2001-09-16 19:05:38 | 17.523 KB<br>Artist: Jamie Swiftrunner</b></center>
-<br>Remington in a pink polka dot dress.<p>Keywords: * character-hoax * joke * sprite * 
+<b>amymad.jpg | 6/18/00 | 61 KB<br>Artist: Jamie Swiftrunner</b></center>
+<br>*gasp* Could it be?! It's a recent piccie! Um, yah... Anyway, I just got three words for ya.. Dun PO Amy! She's got that piko hammer thingie and she ain't afraid ta whap ya with it!<p>Categories: * fan art * 
 </td><td><center>
-<a href=/sonichq/fanfair/hoaxes/../edited/swiftrunner/06.gif><img src=../edited/swiftrunner/06.gif border=0></a>
+<a href=/sonichq/fanfair/pics/djaminalee//breezy.jpg><img src=djaminalee/thumbnails/breezy.jpg border=0></a>
 </center></td>
 <td><center>
-<b>06.gif | 2001-09-16 19:06:58 | 26.481 KB<br>Artist: Jamie Swiftrunner</b></center>
-<br>Jamie Swiftrunner.<p>Keywords: * fan-character * sprite * 
+<b>breezy.jpg | 6/18/00 | 109 KB<br>Artist: Jamie Swiftrunner</b></center>
+<br>Old old pic... It's Breezy da Robot hedgie from da AoSTH series!! (Am I the only one who actualy liked that show?)<p>Categories: * fan art * 
 </td></tr><tr><td><center>
-<a href=/sonichq/fanfair/hoaxes/../edited/swiftrunner/07.GIF><img src=../edited/swiftrunner/07.GIF border=0></a>
+<a href=/sonichq/fanfair/pics/djaminalee//chaos.jpg><img src=djaminalee/thumbnails/chaos.jpg border=0></a>
 </center></td>
 <td><center>
-<b>07.GIF | 2001-09-16 19:08:33 | 21.93 KB<br>Artist: Jamie Swiftrunner</b></center>
-<br>Another inside joke... It's Locke Skywalker! ACK WATCH OUT! He's gonna stab someone with that thing!<p>Keywords: * character-hoax * joke * sprite * 
+<b>chaos.jpg | 6/18/00 | 26 KB<br>Artist: Jamie Swiftrunner</b></center>
+<br>Chaos from SA! He's cool<p>Categories: * fan art * 
 </td><td><center>
-<a href=/sonichq/fanfair/hoaxes/../edited/swiftrunner/08.GIF><img src=../edited/swiftrunner/08.GIF border=0></a>
+<a href=/sonichq/fanfair/pics/djaminalee//larasu.jpg><img src=djaminalee/thumbnails/larasu.jpg border=0></a>
 </center></td>
 <td><center>
-<b>08.GIF | 2001-09-16 19:09:13 | 5.855 KB<br>Artist: Jamie Swiftrunner</b></center>
-<br>Crazy Chameleon made from a Ray the Squirrel sprite. The hardest part to alter was the tail. And people said I couldn't do it.<p>Keywords: * fan-character * sprite * 
+<b>larasu.jpg | 6/18/00 | 39 KB<br>Artist: Jamie Swiftrunner</b></center>
+<br>PARADE OF CRAPPY OLD PICS! This is my idea of what Lara-Su'll look like. Just ta give ya an idea of how old this is... This is the first pic I EVER scanned. Nyaa yaa yaa, old...<p>Categories: * fan art * 
 </td></tr><tr><td><center>
-<a href=/sonichq/fanfair/hoaxes/../edited/swiftrunner/09.GIF><img src=../edited/swiftrunner/09.GIF border=0></a>
+<a href=/sonichq/fanfair/pics/djaminalee//monkeyk.jpg><img src=djaminalee/thumbnails/monkeyk.jpg border=0></a>
 </center></td>
 <td><center>
-<b>09.GIF | 2001-09-16 19:10:11 | 6.271 KB<br>Artist: Jamie Swiftrunner</b></center>
-<br>Charmy the bee!<p>Keywords: * technical-hoax * sprite * 
-</td>
+<b>monkeyk.jpg | 6/18/00 | 56 KB<br>Artist: Jamie Swiftrunner</b></center>
+<br>I'm not da biggest fan of 'Ol MK, but he's cute and stuff... So I drew him! Gotta problem with that?<p>Categories: * fan art * 
+</td><td><center>
+<a href=/sonichq/fanfair/pics/djaminalee//princessacorn.jpg><img src=djaminalee/thumbnails/princessacorn.jpg border=0></a>
+</center></td>
+<td><center>
+<b>princessacorn.jpg | 6/18/00 | 67 KB<br>Artist: Jamie Swiftrunner</b></center>
+<br>Would you believe me if I said this is Sally? It's true! It ain't no fan version of her either! If ya don't believe me look at the "Before satAM" page at SonicHQ! <p>Categories: * fan art * 
+</td></tr><tr><td><center>
+<a href=/sonichq/fanfair/pics/djaminalee//sallymoon.jpg><img src=djaminalee/thumbnails/sallymoon.jpg border=0></a>
+</center></td>
+<td><center>
+<b>sallymoon.jpg | 6/18/00 | 75 KB<br>Artist: Jamie Swiftrunner</b></center>
+<br>Pic I did two years ago... It's Sally Moon! Plus all da Mobian Sailor Senshi.... Bleh, that WOULD have been a good storyline if Archie had put more into it!<p>Categories: * fan art * 
+</td><td><center>
+<a href=/sonichq/fanfair/pics/djaminalee//sallymoonfan.jpg><img src=djaminalee/thumbnails/sallymoonfan.jpg border=0></a>
+</center></td>
+<td><center>
+<b>sallymoonfan.jpg | 6/18/00 | 70 KB<br>Artist: Jamie Swiftrunner</b></center>
+<br>SALLY MOOOOOOOOOOONNNNNNNNnnnnn..... WHAT?! I actualy liked her! Archie's just a bunch of screwups... That's all.... She could been done a WHOLE lot better... But she's still cool!<p>Categories: * fan art * 
+</td></tr><tr><td><center>
+<a href=/sonichq/fanfair/pics/djaminalee//sallysonia.jpg><img src=djaminalee/thumbnails/sallysonia.jpg border=0></a>
+</center></td>
+<td><center>
+<b>sallysonia.jpg | 6/18/00 | 118 KB<br>Artist: Jamie Swiftrunner</b></center>
+<br>It's da two princesses from Archie an SU! Dis one's to all da Archie and SU peeps... SO QUIT FIGHTING ALREADY! BOTH VERSES HAVE THEIR UPS AND DOWNS! Anyone agree? *crickets chirp* I hate it when people ignore my sudden outbursts. *sigh*<p>Categories: * fan art * 
+</td><td><center>
+<a href=/sonichq/fanfair/pics/djaminalee//sonicms.gif><img src=djaminalee/thumbnails/sonicms.gif border=0></a>
+</center></td>
+<td><center>
+<b>sonicms.gif | 6/18/00 | 20 KB<br>Artist: Jamie Swiftrunner</b></center>
+<br>Mouse art pic of Sonic and Metal Sonic. This dang thing took me a MONTH to make on STANDARD MS PAINT! Meh... The original was HUGE too.... 2078x1319 to be exact o.o <p>Categories: * fan art * 
+</td></tr><tr><td><center>
+<a href=/sonichq/fanfair/pics/swiftrunner/01.gif><img src=swiftrunner/01.gif border=0></a>
+</center></td>
+<td><center>
+<b>01.gif | 9/16/01 | 20 KB<br>Artist: Jamie Swiftrunner</b></center>
+<br>Better not get on Julie's bad side!<p>Categories: * character-hoax * technical-hoax * sprite * 
+</td><td><center>
+<a href=/sonichq/fanfair/pics/swiftrunner/02.gif><img src=swiftrunner/02.gif border=0></a>
+</center></td>
+<td><center>
+<b>02.gif | 9/16/01 | 11 KB<br>Artist: Jamie Swiftrunner</b></center>
+<br>Why sally, isn't it rude to yawn in public?<p>Categories: * character-hoax * technical-hoax * sprite * 
+</td></tr><tr><td><center>
+<a href=/sonichq/fanfair/pics/swiftrunner/03.gif><img src=swiftrunner/03.gif border=0></a>
+</center></td>
+<td><center>
+<b>03.gif | 9/16/01 | 5 KB<br>Artist: Jamie Swiftrunner</b></center>
+<br>Spectre with smoke floating around him.<p>Categories: * character-hoax * technical-hoax * sprite * 
+</td><td><center>
+<a href=/sonichq/fanfair/pics/swiftrunner/04.gif><img src=swiftrunner/04.gif border=0></a>
+</center></td>
+<td><center>
+<b>04.gif | 9/16/01 | 9 KB<br>Artist: Jamie Swiftrunner</b></center>
+<br>Remington.<p>Categories: * character-hoax * technical-hoax * sprite * 
+</td></tr><tr><td><center>
+<a href=/sonichq/fanfair/pics/swiftrunner/05.gif><img src=swiftrunner/05.gif border=0></a>
+</center></td>
+<td><center>
+<b>05.gif | 9/16/01 | 17 KB<br>Artist: Jamie Swiftrunner</b></center>
+<br>Remington in a pink polka dot dress.<p>Categories: * character-hoax * joke * sprite * 
+</td><td><center>
+<a href=/sonichq/fanfair/pics/swiftrunner/06.gif><img src=swiftrunner/06.gif border=0></a>
+</center></td>
+<td><center>
+<b>06.gif | 9/16/01 | 25 KB<br>Artist: Jamie Swiftrunner</b></center>
+<br>Jamie Swiftrunner.<p>Categories: * fan-character * sprite * 
+</td></tr>
 </table>
 
 <table border=0 cellspacing=0 cellpadding=0 width=100%>
 <td valign=top><table border=0 cellspacing=0 cellpadding=0 height=100%>
 <tr><td bgcolor=000000 height=100%></td>
-<tr><td align=left valign=bottom><img SRC=../../sonichq/bottomleft.gif BORDER=0 height=20></td>
+<tr><td align=left valign=bottom><img SRC=../../bottomleft.gif BORDER=0 height=20></td>
 </table></td>
 
 <td valign=middle bgcolor=000000 width=100%><center>
-<a href=>Hoaxes Main</a>
+<a href=/sonichq/fanfair/hoaxes>Hoaxes Main</a>
 </center></td>
 
 <td valign=top><table border=0 cellspacing=0 cellpadding=0 height=100%>
 <tr><td bgcolor=000000 height=100%></td>
-<tr><td align=right valign=bottom><img SRC=../../sonichq/bottomright.gif BORDER=0 height=20></td>
+<tr><td align=right valign=bottom><img SRC=../../bottomright.gif BORDER=0 height=20></td>
 </table></td>
 </table>
 
