--- a/sonichq/fanfair/hoaxes/profiles.php/artist.17/index.html
+++ b/sonichq/fanfair/hoaxes/profiles.php/artist.17/index.html
@@ -1,81 +1,92 @@
 
-<html><head><title>Sonic HQ - Fan Fair - Hoaxes - 17</title>
-<base href=/sonichq/sonichq/fanfair/edited/>
+<html><head><title>Sonic HQ - Fan Fair - Hoaxes - Jeno</title>
+<base href=/sonichq/fanfair/pics/>
 <style type=text/css><!-- a:hover{text-decoration: underline} A{text-decoration:none} --></style>
 </head>
 <body bgcolor=FFFFFF TEXT=000000 LINK=6699FF VLINK=6699FF ALINK=00FFFF 
-background=../../../sonichq/images/backgrounds/amygraybg.gif bgproperties=fixed>
-&nbsp;<br>&nbsp;
+background=../../../images/backgrounds/amygraybg.gif bgproperties=fixed>
 
-<p align=left><font face="Arial, Helvetica, sans-serif" size=3 color=000099><b>
-<a href=/sonichq/main.htm>Sonic HQ</a> / <a href=/sonichq/fanfair>Fan Fair</a> / <a href=/sonichq/fanfair/hoaxes>Hoaxes</a> / 17</font>
+<br>
+
+<center>
+<IFRAME SRC="https://web.archive.org/20020107000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top-nopop&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO" MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
+<SCRIPT LANGUAGE="JavaScript">document.write('<SCR'+'IPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20020107000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top-nopop&JS=Y&TARGET=_blank"></SCR'+'IPT>');</SCRIPT>
+<NOSCRIPT>
+<A HREF="https://web.archive.org/20020107000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top-nopop" TARGET="_blank"><IMG SRC="https://web.archive.org/20020107000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y" HEIGHT="60" WIDTH="468"></A>
+</NOSCRIPT>
+</IFRAME>
+<script language="javascript">whdAffiliate=79</script>
+<script language="javascript" src="https://web.archive.org/20020107000000/http://www.webhitsdirect.com/whd.js"></script>
+</center>
+
+<p><font face="Arial, Helvetica, sans-serif" size=3 color=000099><b>
+<a href=/sonichq/main.htm>Sonic HQ</a> / <a href=/sonichq/fanfair>Fan Fair</a> / <a href=/sonichq/fanfair/hoaxes>Hoaxes</a> / Jeno</font>
 </b></font>
 
 <center>
 
-<p><table border=0 cellspacing=0 cellpadding=0>
-<tr><td bgcolor=000000><center>
+<p><table border=0 cellspacing=0 cellpadding=3>
+<tr><td valign=middle bgcolor=000000><center>
 <p><font face=Arial size=2 color=white><b>
-[<a href=>Hoaxes Main</a> | <a href=/sonichq/>HQ Main</a>]
-</b></font></center></td></tr></table>
+[<a href=/sonichq/fanfair/hoaxes>Hoaxes Main</a> | <a href=/>HQ Main</a>]</b></font></center></td></tr></table>
 
 <p><table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100%>
-<tr><td width=19><img src=../../sonichq/topleft.gif width=19></td>
+<tr><td width=19><img src=../../topleft.gif width=19></td>
 
 <td bgcolor=black width=100%><font color=6699FF font face=arial font size=4>
-Sonic HQ Hoaxes | 17</font></td>
+Sonic HQ Hoaxes | Jeno</font></td>
 
-<td width=19><img src=../../sonichq/topright.gif width=19></td></tr>
+<td width=19><img src=../../topright.gif width=19></td></tr>
 </table>
 
 <table border=1 bordercolor=000000 width=100% cellspacing=0 bgcolor=ffffff>
 
 <tr><td><center>
-<a href=/sonichq/fanfair/hoaxes/jeno/01.gif><img src=jeno/thumbnails/01.gif border=0></a>
+<a href=/sonichq/fanfair/pics/jeno/01.gif><img src=jeno/thumbnails/01.gif border=0></a>
 </center></td>
 <td><center>
-<b>01.gif | 2001-09-21 00:09:44 | 13.199 KB<br>Artist: Jeno</b></center>
-<br>Guess Sailor Moon can't hack it, eh?<p>Keywords: * crossover-hoax * screenshot * 
+<b>01.gif | 9/21/01 | 12 KB<br>Artist: Jeno</b></center>
+<br>Guess Sailor Moon can't hack it, eh?<p>Categories: * crossover-hoax * screenshot * 
 </td><td><center>
-<a href=/sonichq/fanfair/hoaxes/jeno/02.gif><img src=jeno/thumbnails/02.gif border=0></a>
+<a href=/sonichq/fanfair/pics/jeno/02.gif><img src=jeno/thumbnails/02.gif border=0></a>
 </center></td>
 <td><center>
-<b>02.gif | 2001-09-21 00:10:34 | 13.554 KB<br>Artist: Jeno</b></center>
-<br>This is what happens when you get get chillydog all over the machine.<p>Keywords: * fake-menu * joke * screenshot * 
+<b>02.gif | 9/21/01 | 13 KB<br>Artist: Jeno</b></center>
+<br>This is what happens when you get get chillydog all over the machine.<p>Categories: * fake-menu * joke * screenshot * 
 </td></tr><tr><td><center>
-<a href=/sonichq/fanfair/hoaxes/jeno/03.gif><img src=jeno/thumbnails/03.gif border=0></a>
+<a href=/sonichq/fanfair/pics/jeno/03.gif><img src=jeno/thumbnails/03.gif border=0></a>
 </center></td>
 <td><center>
-<b>03.gif | 2001-09-21 00:12:39 | 14.774 KB<br>Artist: Jeno</b></center>
-<br>What happens when you hook DragonBallZ HD from SNES on to S&3K from Genesis<p>Keywords: * crossover-hoax * screenshot * 
+<b>03.gif | 9/21/01 | 14 KB<br>Artist: Jeno</b></center>
+<br>What happens when you hook DragonBallZ HD from SNES on to S&3K from Genesis<p>Categories: * crossover-hoax * screenshot * 
 </td><td><center>
-<a href=/sonichq/fanfair/hoaxes/jeno/04.gif><img src=jeno/thumbnails/04.gif border=0></a>
+<a href=/sonichq/fanfair/pics/jeno/04.gif><img src=jeno/thumbnails/04.gif border=0></a>
 </center></td>
 <td><center>
-<b>04.gif | 2001-09-21 00:13:46 | 8.636 KB<br>Artist: Jeno</b></center>
-<br>This answers the long ask question, what would happen if Robotnik won in Sonic1<p>Keywords: * character-hoax * screenshot * 
+<b>04.gif | 9/21/01 | 8 KB<br>Artist: Jeno</b></center>
+<br>This answers the long ask question, what would happen if Robotnik won in Sonic1<p>Categories: * character-hoax * screenshot * 
 </td></tr><tr><td><center>
-<a href=/sonichq/fanfair/hoaxes/jeno/05.gif><img src=jeno/thumbnails/05.gif border=0></a>
+<a href=/sonichq/fanfair/pics/jeno/05.gif><img src=jeno/thumbnails/05.gif border=0></a>
 </center></td>
 <td><center>
-<b>05.gif | 2001-09-21 00:14:52 | 12.592 KB<br>Artist: Jeno</b></center>
-<br>Somthing tells me that Robotnic had too many garlic bakedbeans for breakfast<p>Keywords: * joke * screenshot * 
+<b>05.gif | 9/21/01 | 12 KB<br>Artist: Jeno</b></center>
+<br>Somthing tells me that Robotnic had too many garlic bakedbeans for breakfast<p>Categories: * joke * screenshot * 
 </td>
 </table>
 
 <table border=0 cellspacing=0 cellpadding=0 width=100%>
 <td valign=top><table border=0 cellspacing=0 cellpadding=0 height=100%>
 <tr><td bgcolor=000000 height=100%></td>
-<tr><td align=left valign=bottom><img SRC=../../sonichq/bottomleft.gif BORDER=0 height=20></td>
+<tr><td align=left valign=bottom><img SRC=../../bottomleft.gif BORDER=0 height=20></td>
 </table></td>
 
 <td valign=middle bgcolor=000000 width=100%><center>
-<a href=>Hoaxes Main</a>
+<a href=/sonichq/fanfair/hoaxes>Hoaxes Main</a>
 </center></td>
 
 <td valign=top><table border=0 cellspacing=0 cellpadding=0 height=100%>
 <tr><td bgcolor=000000 height=100%></td>
-<tr><td align=right valign=bottom><img SRC=../../sonichq/bottomright.gif BORDER=0 height=20></td>
+<tr><td align=right valign=bottom><img SRC=../../bottomright.gif BORDER=0 height=20></td>
 </table></td>
 </table>
 
