--- a/sonichq/fanfair/hoaxes/profiles.php/artist.18/index.html
+++ b/sonichq/fanfair/hoaxes/profiles.php/artist.18/index.html
@@ -1,5 +1,5 @@
 
-<html><head><title>Sonic HQ - Fan Fair - Hoaxes - SuperSqeel</title>
+<html><head><title>Sonic HQ - Fan Fair - Hoaxes - Ed Kolis</title>
 <base href=/sonichq/fanfair/pics/>
 <style type=text/css><!-- a:hover{text-decoration: underline} A{text-decoration:none} --></style>
 </head>
@@ -20,7 +20,7 @@ background=../../../images/backgrounds/amygraybg.gif bgproperties=fixed>
 </center>
 
 <p><font face="Arial, Helvetica, sans-serif" size=3 color=000099><b>
-<a href=/sonichq/main.htm>Sonic HQ</a> / <a href=/sonichq/fanfair>Fan Fair</a> / <a href=/sonichq/fanfair/hoaxes>Hoaxes</a> / SuperSqeel</font>
+<a href=/sonichq/main.htm>Sonic HQ</a> / <a href=/sonichq/fanfair>Fan Fair</a> / <a href=/sonichq/fanfair/hoaxes>Hoaxes</a> / Ed Kolis</font>
 </b></font>
 
 <center>
@@ -34,7 +34,7 @@ background=../../../images/backgrounds/amygraybg.gif bgproperties=fixed>
 <tr><td width=19><img src=../../topleft.gif width=19></td>
 
 <td bgcolor=black width=100%><font color=6699FF font face=arial font size=4>
-Sonic HQ Hoaxes | SuperSqeel</font></td>
+Sonic HQ Hoaxes | Ed Kolis</font></td>
 
 <td width=19><img src=../../topright.gif width=19></td></tr>
 </table>
@@ -42,11 +42,11 @@ Sonic HQ Hoaxes | SuperSqeel</font></td>
 <table border=1 bordercolor=000000 width=100% cellspacing=0 bgcolor=ffffff>
 
 <tr><td><center>
-<a href=/sonichq/fanfair/pics/sqeel/01.jpg><img src=sqeel/thumbnails/01.jpg border=0></a>
+<a href=/sonichq/fanfair/pics/ed/hoax01.jpg><img src=ed/thumbnails/hoax01.jpg border=0></a>
 </center></td>
 <td><center>
-<b>01.jpg | 9/16/01 | 38 KB<br>Artist: SuperSqeel</b></center>
-<br>dragonball Z in a sonic game at the start up screen<p>Categories: * crossover-hoax * fake-menu * screenshot * 
+<b>hoax01.jpg | 9/16/01 | 66 KB<br>Artist: Ed Kolis</b></center>
+<br>Dr. Robotnik in Master of Orion II<p>Categories: * crossover-hoax * screenshot * 
 </td>
 </table>
 
