--- a/sonichq/fanfair/hoaxes/profiles.php/artist.6/index.html
+++ b/sonichq/fanfair/hoaxes/profiles.php/artist.6/index.html
@@ -1,5 +1,5 @@
 
-<html><head><title>Sonic HQ - Fan Fair - Hoaxes - SuperSqeel</title>
+<html><head><title>Sonic HQ - Fan Fair - Hoaxes - Vortex</title>
 <base href=/sonichq/fanfair/pics/>
 <style type=text/css><!-- a:hover{text-decoration: underline} A{text-decoration:none} --></style>
 </head>
@@ -20,7 +20,7 @@ background=../../../images/backgrounds/amygraybg.gif bgproperties=fixed>
 </center>
 
 <p><font face="Arial, Helvetica, sans-serif" size=3 color=000099><b>
-<a href=/sonichq/main.htm>Sonic HQ</a> / <a href=/sonichq/fanfair>Fan Fair</a> / <a href=/sonichq/fanfair/hoaxes>Hoaxes</a> / SuperSqeel</font>
+<a href=/sonichq/main.htm>Sonic HQ</a> / <a href=/sonichq/fanfair>Fan Fair</a> / <a href=/sonichq/fanfair/hoaxes>Hoaxes</a> / Vortex</font>
 </b></font>
 
 <center>
@@ -34,7 +34,7 @@ background=../../../images/backgrounds/amygraybg.gif bgproperties=fixed>
 <tr><td width=19><img src=../../topleft.gif width=19></td>
 
 <td bgcolor=black width=100%><font color=6699FF font face=arial font size=4>
-Sonic HQ Hoaxes | SuperSqeel</font></td>
+Sonic HQ Hoaxes | Vortex</font></td>
 
 <td width=19><img src=../../topright.gif width=19></td></tr>
 </table>
@@ -42,11 +42,47 @@ Sonic HQ Hoaxes | SuperSqeel</font></td>
 <table border=1 bordercolor=000000 width=100% cellspacing=0 bgcolor=ffffff>
 
 <tr><td><center>
-<a href=/sonichq/fanfair/pics/sqeel/01.jpg><img src=sqeel/thumbnails/01.jpg border=0></a>
+<a href=/sonichq/fanfair/pics/vortex/hoax01.gif><img src=vortex/thumbnails/hoax01.gif border=0></a>
 </center></td>
 <td><center>
-<b>01.jpg | 9/16/01 | 38 KB<br>Artist: SuperSqeel</b></center>
-<br>dragonball Z in a sonic game at the start up screen<p>Categories: * crossover-hoax * fake-menu * screenshot * 
+<b>hoax01.gif | 9/16/01 | 16 KB<br>Artist: Vortex</b></center>
+<br>Sonic racing Knuckles<p>Categories: * screenshot * 
+</td><td><center>
+<a href=/sonichq/fanfair/pics/vortex/hoax02.gif><img src=vortex/thumbnails/hoax02.gif border=0></a>
+</center></td>
+<td><center>
+<b>hoax02.gif | 9/16/01 | 62 KB<br>Artist: Vortex</b></center>
+<br>Vortex helping out Sonic.<p>Categories: * fan-character * story * joke * screenshot * sprite comic * 
+</td></tr><tr><td><center>
+<a href=/sonichq/fanfair/pics/vortex/hoax03.gif><img src=vortex/thumbnails/hoax03.gif border=0></a>
+</center></td>
+<td><center>
+<b>hoax03.gif | 9/16/01 | 7 KB<br>Artist: Vortex</b></center>
+<br><p>Categories: * character-hoax * joke * screenshot * 
+</td><td><center>
+<a href=/sonichq/fanfair/pics/vortex/hoax04.gif><img src=vortex/thumbnails/hoax04.gif border=0></a>
+</center></td>
+<td><center>
+<b>hoax04.gif | 9/16/01 | 27 KB<br>Artist: Vortex</b></center>
+<br><p>Categories: * fan-character * screenshot * sprite comic * 
+</td></tr><tr><td><center>
+<a href=/sonichq/fanfair/pics/vortex/hoax05.jpg><img src=vortex/thumbnails/hoax05.jpg border=0></a>
+</center></td>
+<td><center>
+<b>hoax05.jpg | 9/16/01 | 96 KB<br>Artist: Vortex</b></center>
+<br><p>Categories: * fan-character * story * joke * screenshot * sprite comic * 
+</td><td><center>
+<a href=/sonichq/fanfair/pics/vortex/hoax06.jpg><img src=vortex/thumbnails/hoax06.jpg border=0></a>
+</center></td>
+<td><center>
+<b>hoax06.jpg | 9/16/01 | 14 KB<br>Artist: Vortex</b></center>
+<br><p>Categories: * fan-character * screenshot * 
+</td></tr><tr><td><center>
+<a href=/sonichq/fanfair/pics/vortex/hoax07.gif><img src=vortex/thumbnails/hoax07.gif border=0></a>
+</center></td>
+<td><center>
+<b>hoax07.gif | 9/16/01 | 4 KB<br>Artist: Vortex</b></center>
+<br><p>Categories: * fan-character * fake-menu * screenshot * 
 </td>
 </table>
 
